Fix HTML structure and update content

--- a/Treinos.html
+++ b/Treinos.html
@@ -19,7 +19,7 @@
        <a style="color: rgb(255, 255, 255);" href="triceps.html">Triceps</a>
   </nav>
 
-  <section class="extensora">
+  <section class="adultora">
    <div style="text-align:justify;">
      <h2><li><strong> Cadeira extensora</strong></li></h2>
     <img src="cadeira-extensora_75064.webp" alt="ERROR" title="Cadeira extensora" width="300" height="300" align:>
@@ -87,6 +87,7 @@
     
 </body>
 </html>
+
 
 
  
