Fix HTML structure and content for bíceps.html

--- a/bíceps.html
+++ b/bíceps.html
@@ -18,7 +18,7 @@
        <a style="color: rgb(255, 255, 255);"href="triceps.html">Triceps</a>
   </nav>
 
- <section class="extensora">
+ <section class="adultora">
    <div style="text-align:justify;">
      <h2><li><strong> Puxada alta aberta</strong></li></h2>
     <img src="Puxada-Alta-Aberta.gif" alt="ERROR" title="Puxada alta aberta" width="300" height="300" align:>
@@ -82,4 +82,5 @@
     </header>
 </body>
 </html>
+
  
