Fix HTML structure and content for posterior page

--- a/posterior.html
+++ b/posterior.html
@@ -18,7 +18,7 @@
             <a style="color: rgb(255, 255, 255);"href="triceps.html">Triceps</a>
   </nav>
 
-  <section class="extensora">
+  <section class="adultora">
    <div style="text-align:justify;">
      <h2><li><strong> Cadeira abdutora</strong></li></h2>
     <img src="cadeira abdutora.webp" alt="ERROR" title="Cadeira abdutora" width="300" height="300" align:>
@@ -85,6 +85,7 @@
    
 </body>
 </html>
+
 
 
  
