Fix HTML structure and update content

--- a/tríceps.html
+++ b/tríceps.html
@@ -19,7 +19,7 @@
             <a style="color: black;" href="Posterior.html">Posterior</a>
   </nav>
 
-  <section class="extensora">
+  <section class="adultora">
    <div style="text-align:justify;">
      <h2><li><strong> Supino</strong></li></h2>
     <img src="supino.jpg" alt="ERROR" title=" Supino" width="300" height="300" align:>
@@ -88,6 +88,7 @@
 
 </body>
 </html>
+
 
 
  
